--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "?.git"
+    "url": "https://github.com/taniatressa/workflowWithGulpAndBrowserify.git"
   },
   "author": "Tania Tressa Thomas",
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-coffee": "^2.3.3",
     "gulp-util": "^3.0.7"
   }
 }
